# code-pretty

./: .dockerignore  .env.example  .gitignore  .railway.json  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  OCR_SETUP.md  QUICK_ANSWERS.md  README.md  docker-compose.yml  fly.toml  quick-start.sh  render.yaml
.kiro/specs/code-snippet-designer/: design.md  requirements.md  tasks.md
src/: lib.rs  main.rs
src/handlers/: generate.rs  health.rs  mod.rs  process.rs  themes.rs  upload.rs
src/models/: code_snippet.rs  errors.rs  mod.rs  theme.rs
src/services/: cache_manager.rs  download_service.rs  export_service.rs  file_storage.rs  image_generator.rs  language_detector.rs  mod.rs  ocr.rs  rate_limiter.rs  session_manager.rs  syntax_highlighter.rs  theme_manager.rs
src/utils/: config.rs  mod.rs  validation.rs
static/: index.html  script.js  styles.css  sw.js
tests/: README.md  frontend_backend_tests.rs  integration_tests.rs  performance_tests.rs
tests/common/: mod.rs
